--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -87,3 +87,7 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+dependencies:
+  qr_flutter:
+    git:
+      url: git://github.com/lukef/qr.flutter.git
